--- a/FarmerWolfCabbageSheep.ipynb
+++ b/FarmerWolfCabbageSheep.ipynb
@@ -31,7 +31,7 @@
     "    <li>If the goat is left alone with the cabbage, the goat will eat the cabbage.</li>\n",
     "</ul> \n",
     "\n",
-    "We let's hope the four get to the other side of the river safely."
+    "We let's hope the four get to the other side of the river safely. "
    ]
   },
   {
@@ -359,7 +359,7 @@
     "    \n",
     "    while(True):\n",
     "        if stackStates == []:\n",
-    "            return\n",
+    "            return None\n",
     "        \n",
     "        else:\n",
     "            thisState=stackStates.pop()\n",
@@ -438,7 +438,7 @@
     "    \n",
     "    while(True):\n",
     "        if queueStates == []:\n",
-    "            return\n",
+    "            return None\n",
     "        \n",
     "        else:\n",
     "            thisState=queueStates.pop(0)\n",
