--- a/FarmerWolfCabbageSheep.ipynb
+++ b/FarmerWolfCabbageSheep.ipynb
@@ -44,12 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "382f3ff2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import copy\n",
+    "import numpy\n",
     "from enum import Enum"
    ]
   },
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "66a224b2",
    "metadata": {},
    "outputs": [
@@ -83,7 +84,7 @@
        "{'A': {'Cabbage', 'Farmer', 'Sheep', 'Wolf'}, 'B': set()}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "dfaf966a",
    "metadata": {},
    "outputs": [
@@ -105,7 +106,7 @@
        "{'A': set(), 'B': {'Cabbage', 'Farmer', 'Sheep', 'Wolf'}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "833e37c0",
    "metadata": {},
    "outputs": [],
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "160de553",
    "metadata": {},
    "outputs": [],
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "ee053990",
    "metadata": {},
    "outputs": [],
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "622f3138",
    "metadata": {},
    "outputs": [],
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "11d8c3ab",
    "metadata": {},
    "outputs": [],
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "9019f956",
    "metadata": {},
    "outputs": [
@@ -302,7 +303,7 @@
        " {'A': {'Cabbage'}, 'B': {'Farmer', 'Sheep', 'Wolf'}}]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "c88b3020",
    "metadata": {},
    "outputs": [],
@@ -345,8 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "f812f0d0",
+   "execution_count": 50,
+   "id": "36656b07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,30 +355,44 @@
     "    \n",
     "    initialState=copy.deepcopy(initialState_)\n",
     "    \n",
-    "    stackStates=[initialState]\n",
-    "    exploredStates=list()\n",
+    "    stackStates=[[initialState,None]]\n",
+    "    exploredStates=c = np.empty(shape=(0,2))\n",
     "    \n",
     "    while(True):\n",
     "        if stackStates == []:\n",
     "            return None\n",
     "        \n",
     "        else:\n",
-    "            thisState=stackStates.pop()\n",
-    "            exploredStates.append(thisState)\n",
+    "            thisState_=stackStates.pop()\n",
+    "            exploredStates=numpy.append(exploredStates, numpy.array([thisState_]), axis=0)\n",
+    "            thisState=thisState_[0]\n",
     "\n",
-    "            if(testBut(thisState, finalState_)):\n",
-    "                return exploredStates\n",
+    "            if(testBut(thisState, finalState_)):                \n",
+    "                path=[exploredStates[:,0][-1]]\n",
+    "                parent=exploredStates[:,1][-1] \n",
+    "                \n",
+    "                while(True):\n",
+    "                    if(parent is not None):\n",
+    "                        path.append(exploredStates[parent,0])\n",
+    "                        parent=exploredStates[parent,1]\n",
+    "                    else:\n",
+    "                        break\n",
+    "                \n",
+    "                path.reverse() \n",
+    "                return path \n",
     "\n",
     "            else:\n",
     "                potentialSuccessors_=potentialSafeSuccessors(thisState)\n",
     "                for i in potentialSuccessors_:\n",
-    "                    if ((i not in stackStates) and (i not in exploredStates)):\n",
-    "                        stackStates.append(i)"
+    "                    \n",
+    "                    if ((i not in stackStates) and (i not in exploredStates[:,0])):\n",
+    "                        \n",
+    "                        stackStates.append([i,exploredStates.shape[0]-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "id": "bc2fb46d",
    "metadata": {},
    "outputs": [],
@@ -387,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "id": "44718e7a",
    "metadata": {},
    "outputs": [
@@ -400,12 +415,11 @@
        " {'A': {'Cabbage'}, 'B': {'Farmer', 'Sheep', 'Wolf'}},\n",
        " {'A': {'Cabbage', 'Farmer', 'Sheep'}, 'B': {'Wolf'}},\n",
        " {'A': {'Sheep'}, 'B': {'Cabbage', 'Farmer', 'Wolf'}},\n",
-       " {'A': {'Farmer', 'Sheep', 'Wolf'}, 'B': {'Cabbage'}},\n",
        " {'A': {'Farmer', 'Sheep'}, 'B': {'Cabbage', 'Wolf'}},\n",
        " {'A': set(), 'B': {'Cabbage', 'Farmer', 'Sheep', 'Wolf'}}]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,39 +438,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "43cc115e",
+   "execution_count": null,
+   "id": "b0737c4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bfs(initialState_, finalState_):\n",
+    "# def bfs(initialState_, finalState_):\n",
     "    \n",
-    "    initialState=copy.deepcopy(initialState_)\n",
+    "#     initialState=copy.deepcopy(initialState_)\n",
     "    \n",
-    "    queueStates=[initialState]\n",
-    "    exploredStates=list()\n",
+    "#     queueStates=[initialState]\n",
+    "#     exploredStates=list()\n",
     "    \n",
-    "    while(True):\n",
-    "        if queueStates == []:\n",
-    "            return None\n",
+    "#     while(True):\n",
+    "#         if queueStates == []:\n",
+    "#             return None\n",
     "        \n",
-    "        else:\n",
-    "            thisState=queueStates.pop(0)\n",
-    "            exploredStates.append(thisState)\n",
+    "#         else:\n",
+    "#             thisState=queueStates.pop(0)\n",
+    "#             exploredStates.append(thisState)\n",
     "\n",
-    "            if(testBut(thisState,finalState_)):\n",
-    "                return exploredStates\n",
+    "#             if(testBut(thisState,finalState_)):\n",
+    "#                 return exploredStates\n",
     "\n",
-    "            else:\n",
-    "                potentialSuccessors_=potentialSafeSuccessors(thisState)\n",
-    "                for i in potentialSuccessors_:\n",
-    "                    if ((i not in queueStates) and (i not in exploredStates)):\n",
-    "                        queueStates.append(i)"
+    "#             else:\n",
+    "#                 potentialSuccessors_=potentialSafeSuccessors(thisState)\n",
+    "#                 for i in potentialSuccessors_:\n",
+    "#                     if ((i not in queueStates) and (i not in exploredStates)):\n",
+    "#                         queueStates.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
+   "id": "6e545d2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(initialState_,finalState_):\n",
+    "    \n",
+    "    initialState=copy.deepcopy(initialState_)\n",
+    "    \n",
+    "    stackStates=[[initialState,None]]\n",
+    "    exploredStates=c = np.empty(shape=(0,2))\n",
+    "    \n",
+    "    while(True):\n",
+    "        if stackStates == []:\n",
+    "            return None\n",
+    "        \n",
+    "        else:\n",
+    "            thisState_=stackStates.pop(0)\n",
+    "            exploredStates=numpy.append(exploredStates, numpy.array([thisState_]), axis=0)\n",
+    "            thisState=thisState_[0]\n",
+    "\n",
+    "            if(testBut(thisState, finalState_)):                \n",
+    "                path=[exploredStates[:,0][-1]]\n",
+    "                parent=exploredStates[:,1][-1] \n",
+    "                \n",
+    "                while(True):\n",
+    "                    if(parent is not None):\n",
+    "                        path.append(exploredStates[parent,0])\n",
+    "                        parent=exploredStates[parent,1]\n",
+    "                    else:\n",
+    "                        break\n",
+    "                \n",
+    "                path.reverse() \n",
+    "                return path \n",
+    "\n",
+    "            else:\n",
+    "                potentialSuccessors_=potentialSafeSuccessors(thisState)\n",
+    "                for i in potentialSuccessors_:\n",
+    "                    \n",
+    "                    if ((i not in stackStates) and (i not in exploredStates[:,0])):\n",
+    "                        \n",
+    "                        stackStates.append([i,exploredStates.shape[0]-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "6416d91a",
    "metadata": {},
    "outputs": [],
@@ -466,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "9ec8623c",
    "metadata": {},
    "outputs": [
@@ -477,15 +537,13 @@
        " {'A': {'Cabbage', 'Wolf'}, 'B': {'Farmer', 'Sheep'}},\n",
        " {'A': {'Cabbage', 'Farmer', 'Wolf'}, 'B': {'Sheep'}},\n",
        " {'A': {'Wolf'}, 'B': {'Cabbage', 'Farmer', 'Sheep'}},\n",
-       " {'A': {'Cabbage'}, 'B': {'Farmer', 'Sheep', 'Wolf'}},\n",
        " {'A': {'Farmer', 'Sheep', 'Wolf'}, 'B': {'Cabbage'}},\n",
-       " {'A': {'Cabbage', 'Farmer', 'Sheep'}, 'B': {'Wolf'}},\n",
        " {'A': {'Sheep'}, 'B': {'Cabbage', 'Farmer', 'Wolf'}},\n",
        " {'A': {'Farmer', 'Sheep'}, 'B': {'Cabbage', 'Wolf'}},\n",
        " {'A': set(), 'B': {'Cabbage', 'Farmer', 'Sheep', 'Wolf'}}]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,6 +551,14 @@
    "source": [
     "path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905fc6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
