fix path: comments

--- a/FarmerWolfCabbageSheep.ipynb
+++ b/FarmerWolfCabbageSheep.ipynb
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "36656b07",
+   "id": "6ea4f22a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,8 +355,11 @@
     "    \n",
     "    initialState=copy.deepcopy(initialState_)\n",
     "    \n",
+    "    #stackStates is like: [state, parentIndexInExploredList]\n",
     "    stackStates=[[initialState,None]]\n",
-    "    exploredStates=c = np.empty(shape=(0,2))\n",
+    "    \n",
+    "    #Array of  stackStates elements\n",
+    "    exploredStates=numpy.empty(shape=(0,2))\n",
     "    \n",
     "    while(True):\n",
     "        if stackStates == []:\n",
@@ -438,40 +441,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b0737c4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def bfs(initialState_, finalState_):\n",
-    "    \n",
-    "#     initialState=copy.deepcopy(initialState_)\n",
-    "    \n",
-    "#     queueStates=[initialState]\n",
-    "#     exploredStates=list()\n",
-    "    \n",
-    "#     while(True):\n",
-    "#         if queueStates == []:\n",
-    "#             return None\n",
-    "        \n",
-    "#         else:\n",
-    "#             thisState=queueStates.pop(0)\n",
-    "#             exploredStates.append(thisState)\n",
-    "\n",
-    "#             if(testBut(thisState,finalState_)):\n",
-    "#                 return exploredStates\n",
-    "\n",
-    "#             else:\n",
-    "#                 potentialSuccessors_=potentialSafeSuccessors(thisState)\n",
-    "#                 for i in potentialSuccessors_:\n",
-    "#                     if ((i not in queueStates) and (i not in exploredStates)):\n",
-    "#                         queueStates.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "6e545d2b",
+   "execution_count": 58,
+   "id": "e7302e00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,15 +450,18 @@
     "    \n",
     "    initialState=copy.deepcopy(initialState_)\n",
     "    \n",
-    "    stackStates=[[initialState,None]]\n",
-    "    exploredStates=c = np.empty(shape=(0,2))\n",
+    "    #queueStates is like: [state, parentIndexInExploredList]\n",
+    "    queueStates=[[initialState,None]]\n",
+    "    \n",
+    "    #Array of  queueStates elements\n",
+    "    exploredStates=numpy.empty(shape=(0,2))\n",
     "    \n",
     "    while(True):\n",
-    "        if stackStates == []:\n",
+    "        if queueStates == []:\n",
     "            return None\n",
     "        \n",
     "        else:\n",
-    "            thisState_=stackStates.pop(0)\n",
+    "            thisState_=queueStates.pop(0)\n",
     "            exploredStates=numpy.append(exploredStates, numpy.array([thisState_]), axis=0)\n",
     "            thisState=thisState_[0]\n",
     "\n",
@@ -509,14 +483,14 @@
     "                potentialSuccessors_=potentialSafeSuccessors(thisState)\n",
     "                for i in potentialSuccessors_:\n",
     "                    \n",
-    "                    if ((i not in stackStates) and (i not in exploredStates[:,0])):\n",
+    "                    if ((i not in queueStates) and (i not in exploredStates[:,0])):\n",
     "                        \n",
-    "                        stackStates.append([i,exploredStates.shape[0]-1])"
+    "                        queueStates.append([i,exploredStates.shape[0]-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "id": "6416d91a",
    "metadata": {},
    "outputs": [],
@@ -526,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "id": "9ec8623c",
    "metadata": {},
    "outputs": [
@@ -543,7 +517,7 @@
        " {'A': set(), 'B': {'Cabbage', 'Farmer', 'Sheep', 'Wolf'}}]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,14 +525,6 @@
    "source": [
     "path"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "905fc6e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
